--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
         import { getAuth, signInAnonymously, onAuthStateChanged, signInWithCustomToken } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
-        import { getFirestore, collection, addDoc, onSnapshot, doc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+        import { getFirestore, collection, addDoc, onSnapshot, doc, query, orderBy, limit, serverTimestamp, getDocs, deleteDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
         // --- Firebase Configuration ---
         const firebaseConfig = JSON.parse(typeof __firebase_config !== 'undefined' ? __firebase_config : '{}');
@@ -16,6 +16,41 @@
         // Initialize Firebase
         let db, auth, user;
         let leaderboardUnsubscribe = null;
+        // Queue times saved before auth/db are ready
+        const unsavedTimes = [];
+        // Current leaderboard in-memory (used for optimistic updates)
+        let currentLeaderboard = [];
+        // Local history cache key
+        const LOCAL_HISTORY_KEY = `fg_history_${appId}`;
+
+        function loadLocalHistory() {
+            try {
+                const raw = localStorage.getItem(LOCAL_HISTORY_KEY);
+                if (!raw) return [];
+                const parsed = JSON.parse(raw);
+                if (!Array.isArray(parsed)) return [];
+                return parsed;
+            } catch (e) {
+                console.warn('loadLocalHistory error', e);
+                return [];
+            }
+        }
+
+        function saveLocalEntry(entry) {
+            try {
+                const arr = loadLocalHistory();
+                arr.unshift(entry);
+                // keep most recent 200 entries
+                while (arr.length > 200) arr.pop();
+                localStorage.setItem(LOCAL_HISTORY_KEY, JSON.stringify(arr));
+            } catch (e) {
+                console.warn('saveLocalEntry error', e);
+            }
+        }
+
+        function clearLocalHistory() {
+            try { localStorage.removeItem(LOCAL_HISTORY_KEY); } catch (e) { /* ignore */ }
+        }
 
         if (firebaseConfig.apiKey) {
             const app = initializeApp(firebaseConfig);
@@ -29,6 +64,7 @@
                     } else {
                         await signInAnonymously(auth);
                     }
+                    console.debug('initAuth: sign-in attempted');
                 } catch (error) {
                     console.error("Auth failed:", error);
                 }
@@ -38,6 +74,7 @@
 
             onAuthStateChanged(auth, (currentUser) => {
                 user = currentUser;
+                console.debug('Auth state changed, user:', user && user.uid ? user.uid : user);
                 if (user) {
                     setupLeaderboard();
                 }
@@ -48,24 +85,85 @@
         function setupLeaderboard() {
             if (!user || !db) return;
 
-            const scoresRef = collection(db, 'artifacts', appId, 'users', user.uid, 'leaderboard');
-            
-            leaderboardUnsubscribe = onSnapshot(scoresRef, (snapshot) => {
+            // Use a query with server-side ordering and a reasonable limit
+            const collRef = collection(db, 'artifacts', appId, 'users', user.uid, 'leaderboard');
+            const q = query(collRef, orderBy('date', 'desc'), limit(50));
+
+            let snapshotReceived = false;
+            leaderboardUnsubscribe = onSnapshot(q, (snapshot) => {
+                snapshotReceived = true;
                 const scores = [];
-                snapshot.forEach(doc => {
-                    scores.push({ id: doc.id, ...doc.data() });
+                snapshot.forEach(d => {
+                    scores.push({ id: d.id, ...d.data() });
                 });
 
-                // Sort in memory (Newest first)
-                scores.sort((a, b) => new Date(b.date) - new Date(a.date));
+                // If server has no records but we have local cached ones, show local until server has data
+                if (scores.length === 0) {
+                    const local = loadLocalHistory();
+                    if (local.length > 0) {
+                        renderLeaderboard(local);
+                        // Attempt to flush local cache to server
+                        (async () => {
+                            const collRef = collection(db, 'artifacts', appId, 'users', user.uid, 'leaderboard');
+                            for (const e of local.slice().reverse()) {
+                                try {
+                                    await addDoc(collRef, { date: serverTimestamp(), duration: e.duration });
+                                } catch (err) {
+                                    console.error('Error flushing local entry to server:', err);
+                                    break;
+                                }
+                            }
+                        })();
+                        return;
+                    }
+                }
 
                 renderLeaderboard(scores);
             }, (error) => {
                 console.error("Error fetching leaderboard:", error);
             });
+
+            // If Firestore doesn't respond quickly, show local cache as fallback
+            setTimeout(() => {
+                try {
+                    // If no snapshot has been received yet, load local history
+                    if (!snapshotReceived) {
+                        const local = loadLocalHistory();
+                        const list = document.getElementById('leaderboard-list');
+                        if (local.length > 0) {
+                            renderLeaderboard(local);
+                            // Note: when snapshot arrives it will overwrite this view
+                        } else {
+                            // show explicit empty state if there is no local cache
+                            list.innerHTML = '<div class="empty-state">No times recorded yet.</div>';
+                        }
+                    }
+                } catch (e) {
+                    console.warn('snapshot fallback error', e);
+                }
+            }, 2500);
+
+            // Flush any times saved before auth completed
+            (async () => {
+                if (unsavedTimes.length === 0) return;
+                console.debug('Flushing', unsavedTimes.length, 'queued times');
+                while (unsavedTimes.length > 0) {
+                    const durationMs = unsavedTimes.shift();
+                    try {
+                        await addDoc(collRef, { date: serverTimestamp(), duration: durationMs });
+                    } catch (e) {
+                        console.error('Error flushing queued time:', e);
+                        // push back and stop trying right now
+                        unsavedTimes.unshift(durationMs);
+                        break;
+                    }
+                }
+            })();
         }
 
         function renderLeaderboard(scores) {
+            // keep an in-memory copy for optimistic updates
+            currentLeaderboard = Array.isArray(scores) ? scores.slice() : [];
             const list = document.getElementById('leaderboard-list');
             list.innerHTML = '';
 
@@ -78,8 +176,9 @@
                 const item = document.createElement('div');
                 item.className = 'leaderboard-item';
                 
-                const dateObj = new Date(score.date);
-                const dateStr = dateObj.toLocaleDateString() + ' ' + dateObj.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
+                // Handle Firestore Timestamp as well as ISO/date-string
+                const dateObj = score.date && typeof score.date.toDate === 'function' ? score.date.toDate() : new Date(score.date);
+                const dateStr = dateObj && !isNaN(dateObj.getTime()) ? dateObj.toLocaleDateString() + ' ' + dateObj.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'}) : '—';
 
                 item.innerHTML = `
                     <span class="lb-time">${formatTime(score.duration)}</span>
@@ -89,18 +188,98 @@
             });
         }
 
-        // Expose function to save time
+        // Expose function to save time (queues if auth/db not ready) and cache locally
         window.saveTime = async (durationMs) => {
-            if (!user || !db) return;
+            const entry = { date: new Date().toISOString(), duration: durationMs };
+            // Always cache locally for immediate visibility and offline resilience
+            try { saveLocalEntry(entry); } catch (e) { console.warn('local cache failed', e); }
+
+            if (!user || !db) {
+                console.debug('saveTime: auth/db not ready, queuing duration', durationMs);
+                unsavedTimes.push(durationMs);
+                // Optimistically update UI from local cache
+                try {
+                    currentLeaderboard.unshift({ id: `local-${Date.now()}`, ...entry });
+                    if (currentLeaderboard.length > 200) currentLeaderboard.pop();
+                    const lbPanel = document.getElementById('leaderboard-panel');
+                    if (!lbPanel || !lbPanel.classList.contains('hidden')) {
+                        renderLeaderboard(currentLeaderboard);
+                    }
+                } catch (e) { console.warn('optimistic update failed', e); }
+                return;
+            }
+
             try {
                 await addDoc(collection(db, 'artifacts', appId, 'users', user.uid, 'leaderboard'), {
-                    date: new Date().toISOString(),
+                    date: serverTimestamp(),
                     duration: durationMs
                 });
             } catch (e) {
                 console.error("Error saving time:", e);
+                // queue for retry
+                unsavedTimes.push(durationMs);
+                // Also optimistically update UI on failure
+                try {
+                    currentLeaderboard.unshift({ id: `local-${Date.now()}`, ...entry });
+                    if (currentLeaderboard.length > 200) currentLeaderboard.pop();
+                    const lbPanel = document.getElementById('leaderboard-panel');
+                    if (!lbPanel || !lbPanel.classList.contains('hidden')) {
+                        renderLeaderboard(currentLeaderboard);
+                    }
+                } catch (err) { console.warn('optimistic update after failure failed', err); }
             }
         };
+
+        // If Firebase is not configured, show local history immediately once DOM is ready
+        document.addEventListener('DOMContentLoaded', () => {
+            if (!firebaseConfig.apiKey) {
+                try {
+                    const local = loadLocalHistory();
+                    const list = document.getElementById('leaderboard-list');
+                    if (local.length > 0) {
+                        renderLeaderboard(local);
+                    } else if (list) {
+                        list.innerHTML = '<div class="empty-state">No times recorded yet.</div>';
+                    }
+                } catch (e) {
+                    console.warn('local history render failed', e);
+                }
+            }
+            // Attach clear history handler
+            try {
+                const btn = document.getElementById('clear-history-btn');
+                if (btn) btn.addEventListener('click', clearHistory);
+            } catch (e) { /* ignore */ }
+        });
+
+        // Clear history (local + server). Asks for confirmation first.
+        async function clearHistory() {
+            if (!confirm('Clear all personal records? This cannot be undone.')) return;
+
+            // Clear local cache and optimistic UI first
+            try {
+                clearLocalHistory();
+            } catch (e) { console.warn('clearLocalHistory failed', e); }
+            currentLeaderboard = [];
+            renderLeaderboard([]);
+
+            // If Firestore available, try to delete server-side docs
+            if (!db || !user) return;
+            try {
+                const collRef = collection(db, 'artifacts', appId, 'users', user.uid, 'leaderboard');
+                const snap = await getDocs(collRef);
+                for (const d of snap.docs) {
+                    try {
+                        await deleteDoc(doc(db, 'artifacts', appId, 'users', user.uid, 'leaderboard', d.id));
+                    } catch (err) {
+                        console.error('Failed to delete doc', d.id, err);
+                    }
+                }
+                console.debug('Server history cleared');
+            } catch (e) {
+                console.error('Error clearing server history', e);
+            }
+        }
     </script>
     <style>
         body, html {
@@ -278,6 +457,10 @@
         .lb-date { color: #888; font-size: 12px; }
         .empty-state { color: #666; font-style: italic; text-align: center; padding: 20px; }
 
+        /* Danger variant for destructive buttons */
+        button.action-btn.danger { background: #c9302c; color: #fff; border: none; }
+        button.action-btn.danger:hover { background: #a52822; }
+
         /* Control Group Styles */
         .control-group { margin-bottom: 15px; }
         label { display: flex; justify-content: space-between; font-size: 14px; margin-bottom: 5px; }
@@ -329,7 +512,10 @@
 
     <!-- Leaderboard Panel -->
     <div id="leaderboard-panel" class="panel hidden">
-        <h3>Personal Records</h3>
+        <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:10px;">
+            <h3>Personal Records</h3>
+            <button id="clear-history-btn" class="action-btn danger">Clear History</button>
+        </div>
         <div id="leaderboard-list">
             <div class="empty-state">Loading history...</div>
         </div>
