--- a/index.html
+++ b/index.html
@@ -424,9 +424,39 @@
         button.action-btn:hover { background: #555; }
         button.action-btn.primary { background: #fff; color: #000; border: none; }
         button.action-btn.primary:hover { background: #ddd; }
+
+        /* Seizure warning overlay styles */
+        .seizure-overlay {
+            position: fixed;
+            inset: 0;
+            background: rgba(0,0,0,0.95);
+            z-index: 9999;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 24px;
+            box-sizing: border-box;
+        }
+        .seizure-overlay.hidden { display: none; }
+        .seizure-content { color: #fff; text-align: center; max-width: 900px; }
+        .seizure-content h1 { font-size: clamp(22px, 6vw, 54px); margin: 0 0 12px 0; }
+        .seizure-content p { font-size: clamp(16px, 3.5vw, 20px); line-height: 1.4; color: #f5f5f5; }
     </style>
 </head>
 <body>
+
+    <!-- Seizure warning overlay (shown on first visit unless cookie is set) -->
+    <div id="seizure-overlay" class="seizure-overlay">
+        <div class="seizure-content">
+            <h1>Seizure Warning</h1>
+            <p>Flashing lights and high-contrast patterns may trigger seizures in people with
+            photosensitive epilepsy. If you have a history of photosensitive epilepsy or are
+            sensitive to flashing/rapidly changing images, do NOT click Continue.</p>
+            <div style="margin-top:20px;">
+                <button id="seizure-continue-btn" class="action-btn primary">Continue</button>
+            </div>
+        </div>
+    </div>
 
     <canvas id="noiseCanvas"></canvas>
     <div id="scatter-container"></div>
@@ -778,6 +808,59 @@
 
         resize();
         animate();
+
+        // --- Seizure warning / cookie handling ---
+        function setCookie(name, value, days) {
+            try {
+                const d = new Date();
+                d.setTime(d.getTime() + (days*24*60*60*1000));
+                const expires = "expires=" + d.toUTCString();
+                document.cookie = `${name}=${encodeURIComponent(value)};${expires};path=/;SameSite=Lax`;
+            } catch (e) { console.warn('setCookie failed', e); }
+        }
+
+        function getCookie(name) {
+            try {
+                const cname = name + "=";
+                const decoded = decodeURIComponent(document.cookie || "");
+                const parts = decoded.split(';');
+                for (let p of parts) {
+                    p = p.trim();
+                    if (p.indexOf(cname) === 0) return p.substring(cname.length);
+                }
+            } catch (e) { console.warn('getCookie failed', e); }
+            return null;
+        }
+
+        function showSeizureOverlayIfNeeded() {
+            const overlay = document.getElementById('seizure-overlay');
+            if (!overlay) return;
+            const ack = getCookie('fg_seizure_ack');
+            if (ack === '1') {
+                overlay.classList.add('hidden');
+                return;
+            }
+            // Show overlay (blocks interaction until acknowledged)
+            overlay.classList.remove('hidden');
+
+            const btn = document.getElementById('seizure-continue-btn');
+            if (btn) {
+                btn.addEventListener('click', () => {
+                    // Save acknowledgement for ~10 years
+                    setCookie('fg_seizure_ack', '1', 3650);
+                    overlay.classList.add('hidden');
+                });
+            }
+        }
+
+        // Run check as soon as possible
+        try {
+            if (document.readyState === 'loading') {
+                document.addEventListener('DOMContentLoaded', showSeizureOverlayIfNeeded);
+            } else {
+                showSeizureOverlayIfNeeded();
+            }
+        } catch (e) { console.warn('seizure overlay init failed', e); }
     </script>
 </body>
 </html>
